--- a/src/main/webapp/resources/pharmacy/grn_wh.xhtml
+++ b/src/main/webapp/resources/pharmacy/grn_wh.xhtml
@@ -194,6 +194,7 @@
                                     </h:outputLabel>
                                 </f:facet>
                             </p:column>
+                            <p:column colspan="2" />
                         </p:row>
 
                         <p:row>
@@ -206,6 +207,7 @@
                                     </h:outputLabel>
                                 </f:facet>
                             </p:column>
+                            <p:column colspan="2" />
                         </p:row>
 
                         <p:row >
@@ -217,7 +219,7 @@
                                     </h:outputLabel>
                                 </f:facet>
                             </p:column>
-
+                            <p:column colspan="2" />
                         </p:row>
                         <p:row >
                             <p:column colspan="7" footerText="Discount"/>
@@ -228,7 +230,7 @@
                                     </h:outputLabel>
                                 </f:facet>
                             </p:column>
-
+                            <p:column colspan="2" />
                         </p:row>
                         <p:row >
                             <p:column colspan="7" footerText="Net Total" style="font-weight: bold!important;"/>
@@ -239,7 +241,7 @@
                                     </h:outputLabel>
                                 </f:facet>
                             </p:column>
-
+                            <p:column colspan="2" />
                         </p:row>
                     </p:columnGroup>
                 </p:dataTable>
