--- a/src/main/webapp/reportInstitution/report_cash_category_with_pro_month.xhtml
+++ b/src/main/webapp/reportInstitution/report_cash_category_with_pro_month.xhtml
@@ -53,6 +53,9 @@
                                          colCredit,
                                          outside:outside,
                                          pharmacy:pharmacy,
+                                         pharmacyc:pharmacyc,
+                                         pharmacyws:pharmacyws,
+                                         pharmacywsc:pharmacywsc,
                                          inward:inward,                                     
                                          col,
                                          opd_professional:opd_professional,
@@ -116,7 +119,19 @@
 
             <p:spacer height="30"/>
 
-            <in:pharmacy id="pharmacy"/>
+            <in:pharmacy id="pharmacy" pharmacy="#{bookKeepingSummery.pharmacySales}"/>
+
+            <p:spacer height="30"/>
+
+            <in:pharmacy id="pharmacyc" pharmacy="#{bookKeepingSummery.pharmacySalesCredit}" credit="true"/>
+
+            <p:spacer height="30"/>
+
+            <in:pharmacy id="pharmacyws" pharmacy="#{bookKeepingSummery.pharmacyWholeSales}" wholeSale="true"/>
+
+            <p:spacer height="30"/>
+
+            <in:pharmacy id="pharmacywsc" pharmacy="#{bookKeepingSummery.pharmacyWholeSalesCredit}" wholeSale="true" credit="true"/>
 
             <p:spacer height="30"/>
 
