--- a/src/main/webapp/reportInstitution/report_cash_category_with_pro_day.xhtml
+++ b/src/main/webapp/reportInstitution/report_cash_category_with_pro_day.xhtml
@@ -49,6 +49,9 @@
                                          colCredit,
                                          outside:outside,
                                          pharmacy:pharmacy,
+                                         pharmacyc:pharmacyc,
+                                         pharmacyws:pharmacyws,
+                                         pharmacywsc:pharmacywsc,
                                          pharmacyWholeSale:pharmacyWholeSale,
                                          inward_collection:inward_collection,
                                          agent_collection:agent_collection,
@@ -119,7 +122,19 @@
 
             <p:spacer height="30"/>
 
-            <in:pharmacy id="pharmacy"/>
+            <in:pharmacy id="pharmacy" pharmacy="#{bookKeepingSummery.pharmacySales}"/>
+
+            <p:spacer height="30"/>
+
+            <in:pharmacy id="pharmacyc" pharmacy="#{bookKeepingSummery.pharmacySalesCredit}" credit="true"/>
+
+            <p:spacer height="30"/>
+
+            <in:pharmacy id="pharmacyws" pharmacy="#{bookKeepingSummery.pharmacyWholeSales}" wholeSale="true"/>
+
+            <p:spacer height="30"/>
+
+            <in:pharmacy id="pharmacywsc" pharmacy="#{bookKeepingSummery.pharmacyWholeSalesCredit}" wholeSale="true" credit="true"/>
 
             <p:spacer height="30"/>
 
