--- a/src/main/webapp/credit/credit_compnay_bill_pharmacy_all.xhtml
+++ b/src/main/webapp/credit/credit_compnay_bill_pharmacy_all.xhtml
@@ -37,7 +37,7 @@
                                 <pa:slip paymentMethodData="#{cashRecieveBillController.paymentMethodData}"/>
                             </h:panelGroup>
 
-                            <p:commandButton id="btnSettle" value="Settle" action="#{cashRecieveBillController.settleBill}"
+                            <p:commandButton id="btnSettle" value="Settle" action="#{cashRecieveBillController.settleBillPharmacy()}"
                                              ajax="false"  style="width: 150px; padding: 1px;border: 1px solid ; margin: auto;" onclick="onSubmitButton();">
                             </p:commandButton>
                             <p:defaultCommand target="btnSettle"/>
