--- a/src/main/webapp/reportCashier/report_cashier_detailed_by_user.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_detailed_by_user.xhtml
@@ -667,12 +667,42 @@
                         </p:dataTable>
 
                         <p:spacer height="30"/>
-
-                        <h:panelGrid columns="1">
+                        
+                        <div>
                             <h:outputLabel value="Cashier : #{commonReport.webUser.webUserPerson.name}"/>
-                            <br/>
+                            <br></br>
+                            <br></br>
+                            <br></br>
                             <h:outputLabel value="............................"/>
-                        </h:panelGrid>
+                        </div>
+                        <br></br>
+                        <br></br>
+                        <br></br>
+                        <br></br>
+                        <br></br>
+                        <br></br>
+                        <div>
+                            <h:outputLabel value="I Received Cash With / Without Sealed , With / Without Count."/>
+                        </div>
+                        <br></br>
+                        <br></br>
+                        <br></br>
+                        <div>
+                            <h:outputLabel value="Received By:"/>
+                            <br></br>
+                            <br></br>
+                            <br></br>
+                            <h:outputLabel value="............................(.......)"/>
+                            <br></br>
+                            <br></br>
+                            <br></br>
+                            <h:outputLabel value="Date:" />
+                            <br></br>
+                            <br></br>
+                            <h:outputLabel value="................/....../......" />
+                        </div>
+                        <p:spacer height="30"/>
+
 
                         <ca:pettyBills id="pty_b" data="#{commonReport.userPettyPaymentBills}"/>
 
