--- a/src/main/webapp/reportInstitution/report_cash_category_with_pro_day.xhtml
+++ b/src/main/webapp/reportInstitution/report_cash_category_with_pro_day.xhtml
@@ -57,6 +57,7 @@
                                          agent_collection:agent_collection,
                                          credit_collection:credit_collection,
                                          credit_collection_inward:credit_collection_inward,
+                                         credit_collection_pharmacy:credit_collection_pharmacy,
                                          col,
                                          opd_professional:opd_professional,
                                          opd_professional_credit:opd_professional_credit,
@@ -138,10 +139,6 @@
 
             <p:spacer height="30"/>
 
-            <in:pharmacy_whole_sale id="pharmacyWholeSale"/>
-
-            <p:spacer height="30"/>
-
             <in:channel id="channel"/>
 
             <p:spacer height="30"/>
@@ -166,7 +163,10 @@
             <in:credit_collection_inward                 
                 id="credit_collection_inward"/>
 
-
+            <p:spacer height="30"/>
+            
+            <in:credit_collection_pharmacy 
+                id="credit_collection_pharmacy"/>
 
             <p:spacer height="30"/>
 
