--- a/src/main/webapp/resources/bill/insRecieve.xhtml
+++ b/src/main/webapp/resources/bill/insRecieve.xhtml
@@ -158,8 +158,8 @@
                                  left: 0%!important;
                                  top: 19%!important;
                                  font-size: 12px!important;">
-                                <h:outputLabel value="OPD Credit Settlement" rendered="#{cc.attrs.bill.billItems.get(0).patientEncounter eq null}"/>
-                                <h:outputLabel value="BHT Credit Settlement" rendered="#{cc.attrs.bill.billItems.get(0).patientEncounter ne null}"/>
+                                <h:outputLabel value="OPD Credit Settlement" rendered="#{cc.attrs.billController.billItems.get(0).patientEncounter eq null}"/>
+                                <h:outputLabel value="BHT Credit Settlement" rendered="#{cc.attrs.billController.billItems.get(0).patientEncounter ne null}"/>
                             </div>
 
                             <h:outputLabel value="#{cc.attrs.bill.patient.person.nameWithTitle}"
@@ -182,7 +182,7 @@
                                  position: absolute;
                                  left: 10%;
                                  top: 25%;" >
-                                <h:dataTable value="#{cc.attrs.bill.billItems}" var="b" >                                               
+                                <h:dataTable value="#{cc.attrs.billController.billItems}" var="b" >                                               
                                     <p:column >                                                     
                                         <p:outputLabel style="font-size: 10px!important" value="#{b.patientEncounter.bhtNo} - " rendered="#{b.patientEncounter ne null}"/>
                                         <p:outputLabel style="font-size: 10px!important" value="#{b.referenceBill.insId}" rendered="#{b.patientEncounter eq null}"/>
@@ -222,7 +222,7 @@
                                  position: absolute;
                                  left: 80%;
                                  top: 25%;" >
-                                <h:dataTable value="#{cc.attrs.bill.billItems}" var="bip1" >
+                                <h:dataTable value="#{cc.attrs.billController.billItems}" var="bip1" >
                                     <h:column>
                                         <h:outputLabel value="#{bip1.netValue}"  style="font-size: 10px!important; float: right;" >
                                             <f:convertNumber pattern="#,##0.00" />
